samples/_failures_safe/1761427012_f9073f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_df0d1a08.c: In function ‘main’:
./samples/SAFE/__tmp_df0d1a08.c:163:18: error: ‘EVENT’ undeclared (first use in this function)
  163 |             case EVENT
      |                  ^~~~~
./samples/SAFE/__tmp_df0d1a08.c:163:18: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_df0d1a08.c:163:13: error: expected ‘:’ or ‘...’ at end of input
  163 |             case EVENT
      |             ^~~~
./samples/SAFE/__tmp_df0d1a08.c:163:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_df0d1a08.c:163:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_df0d1a08.c:163:13: error: expected declaration or statement at end of input
